<resources>

    <string name="app_name">smartapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 登陆页面 -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="hintusername">请输入用户名</string>
    <string name="hintpassword">请输入密码</string>
    <string name="button">登陆</string>
    <string name="login">还没有账号，立即注册</string>
    <!-- 注册 -->
    <string name="register_username">用户名</string>
    <string name="remember_username">记住用户名</string>
    <string name="register_email">邮箱</string>
    <string name="register_password">密码</string>
    <string name="register_bt">确认</string>
    <!-- 主页面 -->
    <string name="tab_search">搜地点</string>


    <!--我-->
    <string name="fg_tab_me">我</string>
    <string name="fg_me_edit">编辑</string>
    <string name="fg_me_info">个人信息</string>
    <string name="fg_me_username">用户名</string>
    <string name="fg_me_name">姓名</string>
    <string name="fg_me_nickname">昵称</string>
    <string name="fg_me_company">单位</string>
    <string name="fg_me_department">部门</string>
    <string name="fg_me_exit">退出</string>

    <!--更改信息-->
    <string name="fg_tab_update">更改信息</string>
    <string name="fg_update_sure">确定</string>
    <string name="fg_update_lastname">姓</string>
    <string name="fg_update_firstname">名</string>
    <string name="fg_update_nickname">昵称</string>
    <string name="fg_update_company">单位</string>
    <string name="fg_update_department">部门</string>
</resources>