<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9FB"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/fg_tab_me"
            android:textColor="@color/text_topbar"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginEnd="12dp"
            android:textColor="@color/text_topbar"
            android:textSize="15sp"
            android:text="@string/fg_me_edit"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativelayout"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/bg_white">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="start|center"
                        android:text="@string/fg_me_username"
                        android:textColor="@color/bg_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/usernamevalue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@+id/username"
                        android:gravity="end|center"
                        android:textColor="#95A1AA"
                        android:textSize="15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/div_white" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/bg_white">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="start|center"
                        android:text="@string/fg_me_name"
                        android:textColor="@color/bg_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/namevalue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@+id/name"
                        android:gravity="end|center"
                        android:textColor="#95A1AA"
                        android:textSize="15sp" />
                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/div_white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/bg_white">

                    <TextView
                        android:id="@+id/nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="start|center"
                        android:text="@string/fg_me_nickname"
                        android:textColor="@color/bg_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/nicknamevalue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@+id/nickname"
                        android:gravity="end|center"
                        android:textColor="#95A1AA"
                        android:textSize="15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/div_white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/bg_white">

                    <TextView
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="start|center"
                        android:text="@string/fg_me_company"
                        android:textColor="@color/bg_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/companyname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@+id/company"
                        android:gravity="end|center"
                        android:textColor="#95A1AA"
                        android:textSize="15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/div_white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/bg_white">

                    <TextView
                        android:id="@+id/department"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="start|center"
                        android:text="@string/fg_me_department"
                        android:textColor="@color/bg_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/departmentname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_toEndOf="@+id/department"
                        android:gravity="end|center"
                        android:textColor="#95A1AA"
                        android:textSize="15sp" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/bg_white"
                    android:layout_marginTop="20dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/div_white" />

                    <Button
                        android:id="@+id/exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="@color/bg_white"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/fg_me_exit"
                        android:textColor="@color/bg_black"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/div_white" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
</LinearLayout>